First attempt at code, added README

--- a/index.html
+++ b/index.html
@@ -2,10 +2,42 @@
 <html>
 <head>
   <title>Craigslist, but better</title>
+  <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
   <!-- top bar goes here -->
 
-  
+  <div class="left-sidebar">
+    <div class="contact-info-box">
+      
+    </div>
+  </div>
+  <div class="main-content">
+    <div class="gallery">
+      <div class="main-image">
+        <img src="assets/img/gorilla-gorillaz-plastic-beach-364938.jpg">
+      </div>
+      <div class="thumbnail-row">
+        <!-- <div class="thumbnail-box"> -->
+          <div class="thumbnail">
+            <img src="assets/img/Bix.jpg">
+          </div>
+        <!-- </div> -->
+        <div class="thumbnail">
+          <img src="assets/img/TmrCYWd.jpg">
+        </div>
+      </div>
+    </div>
+    <div class="description-box">
+      <div class="description">
+        <h1>Beautiful 3br/1bath Condo in Picturesque Waterfront Location</h1>
+        <p></p>
+      </div>
+    </div>
+  </div>
+  <div class="right-sidebar">
+
+  </div>
 </body>
 </html>
