Minor fixes to main-content

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="left-sidebar">
     <div class="contact-info-box">
       <a href"" class = "left-sidebar-item" id = "link1">Some link here</a>
-      <a href"" class = "left-sidebar-item" id "link2">Another link here</a>
+      <a href"" class = "left-sidebar-item" id = "link2">Another link here</a>
       <a href"" class = "left-sidebar-item" id = "link3">And another one here</a>
     </div>
   </div>
