Thumbnail-row now vertical, cleaned up code
Made thumbnail row vertical for cool scrolling effects. Cleaned up code
by replacing margins with padding, added background color to right
sidebar, removed some unnecessary classes.

--- a/index.html
+++ b/index.html
@@ -26,40 +26,28 @@
   <div class="main-content">
     <div class="gallery">
       <div class="main-image">
-        <img class="img-scaled-wh" src="assets/img/gorilla-gorillaz-plastic-beach-364938.jpg">
+        <img src="assets/img/gorilla-gorillaz-plastic-beach-364938.jpg">
       </div>
-      <div class="thumbnail-row-vertical">
+      <div class="thumbnail-row">
         <!-- <div class="thumbnail-box"> -->
           <div class="thumbnail">
-            <img class="img-scaled-wh" src="assets/img/Bix.jpg">
+            <img src="assets/img/Bix.jpg">
           </div>
         <!-- </div> -->
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img src="assets/img/TmrCYWd.jpg">
         </div>
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img src="assets/img/TmrCYWd.jpg">
         </div>
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img src="assets/img/TmrCYWd.jpg">
         </div>
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img src="assets/img/TmrCYWd.jpg">
         </div>
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
-        </div>
-        <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
-        </div>
-        <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
-        </div>
-        <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
-        </div>
-        <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img src="assets/img/TmrCYWd.jpg">
         </div>
       </div>
     </div>
@@ -68,15 +56,13 @@
       <div class="title">
         <h1>Beautiful 3br/1bath Condo in Picturesque Waterfront Location</h1>
       </div>
-      <p class="description" id="p1">
+      <div class = "description" id = "p1">
         At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
-      </p>
-      <p class="description" id="p2">
-        Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
-      </p>
-      <p class="description" id="p3">
-        Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
-      </p>
+      </div>
+      <div class = "description" id = "p2">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
+      </div>
+      <div class = "description" id = "p3">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+      </div>
     </div>
   </div>
 
