Added images, started main page
Added some stock images for the main page. Also started implementing
the categories on the main page, and started the user info part of the
nav bar.

--- a/detail.html
+++ b/detail.html
@@ -11,6 +11,10 @@
     <div id="logo">craigslist</div>
     <input type="text" placeholder="I'm looking for..." id="search-field" />
     <input type="submit" value="search" id="search-button" />
+    <div id="account-info">
+      <span id="username">Stuart Tusspot</span>
+      
+    </div>
   </div>
 
   <!-- LEFT SIDEBAR -->
@@ -23,10 +27,10 @@
   </div>
 
   <!-- MAIN CONTENT -->
-  <div class="main-content">
+  <div class="left-offset main-content">
     <div class="gallery">
       <div class="main-image">
-        <img class="img-scaled-wh" src="assets/img/gorilla-gorillaz-plastic-beach-364938.jpg">
+        <img class="img-scaled-wh" src="assets/img/plastic-beach-day.jpg">
       </div>
       <div class="thumbnail-row-vertical">
         <!-- <div class="thumbnail-box"> -->
@@ -35,31 +39,31 @@
           </div>
         <!-- </div> -->
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img class="img-scaled-wh" src="assets/img/plastic-beach-night.jpg">
         </div>
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img class="img-scaled-wh" src="assets/img/plastic-beach-night.jpg">
         </div>
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img class="img-scaled-wh" src="assets/img/plastic-beach-night.jpg">
         </div>
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img class="img-scaled-wh" src="assets/img/plastic-beach-night.jpg">
         </div>
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img class="img-scaled-wh" src="assets/img/plastic-beach-night.jpg">
         </div>
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img class="img-scaled-wh" src="assets/img/plastic-beach-night.jpg">
         </div>
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img class="img-scaled-wh" src="assets/img/plastic-beach-night.jpg">
         </div>
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img class="img-scaled-wh" src="assets/img/plastic-beach-night.jpg">
         </div>
         <div class="thumbnail">
-          <img class="img-scaled-wh" src="assets/img/TmrCYWd.jpg">
+          <img class="img-scaled-wh" src="assets/img/plastic-beach-night.jpg">
         </div>
       </div>
     </div>
