--- a/index.html
+++ b/index.html
@@ -11,68 +11,73 @@
     <div id="logo">craigslist</div>
     <input type="text" placeholder="I'm looking for..." id="search-field" />
     <input type="submit" value="search" id="search-button" />
+    <div id="account-info">
+      <span id="username">Stuart Tusspot</span>
+      
+    </div>
   </div>
 
   <!-- LEFT SIDEBAR -->
-  <div class="left-sidebar">
+<!--   <div class="left-sidebar">
     <div class="contact-info-box">
       <a href"" class = "left-sidebar-item" id = "link1">Some link here</a>
       <a href"" class = "left-sidebar-item" id = "link2">Another link here</a>
       <a href"" class = "left-sidebar-item" id = "link3">And another one here</a>
     </div>
   </div>
-
+ -->
   <!-- MAIN CONTENT -->
-  <div class="main-content">
+  <div class="left-offset main-content">
     <div class="gallery">
-      <div class="main-image">
-        <img src="assets/img/gorilla-gorillaz-plastic-beach-364938.jpg">
-      </div>
-      <div class="thumbnail-row">
-        <!-- <div class="thumbnail-box"> -->
-          <div class="thumbnail">
-            <img src="assets/img/Bix.jpg">
-          </div>
-        <!-- </div> -->
-        <div class="thumbnail">
-          <img src="assets/img/TmrCYWd.jpg">
-        </div>
-        <div class="thumbnail">
-          <img src="assets/img/TmrCYWd.jpg">
-        </div>
-        <div class="thumbnail">
-          <img src="assets/img/TmrCYWd.jpg">
-        </div>
-        <div class="thumbnail">
-          <img src="assets/img/TmrCYWd.jpg">
-        </div>
-        <div class="thumbnail">
-          <img src="assets/img/TmrCYWd.jpg">
-        </div>
-      </div>
+    <div class="hero-image">
+      <img class="img-scaled-wh" src="assets/img/plastic-beach-day.jpg">
     </div>
-
-    <div class="description-box">
-      <div class="title">
-        <h1>Beautiful 3br/1bath Condo in Picturesque Waterfront Location</h1>
-      </div>
-      <div class = "description" id = "p1">
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
-      </div>
-      <div class = "description" id = "p2">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
-      </div>
-      <div class = "description" id = "p3">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
-      </div>
+    </div>
+    <div class="left category">
+      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+      <div class="category-title">Community</div>
+    </div>
+    <div class="right category">
+      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+      <div class="category-title">Community</div>
+    </div>
+    <div class="left category">
+      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+      <div class="category-title">Community</div>
+    </div>
+    <div class="right category">
+      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+      <div class="category-title">Community</div>
+    </div>
+    <div class="left category">
+      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+      <div class="category-title">Community</div>
+    </div>
+    <div class="right category">
+      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+      <div class="category-title">Community</div>
+    </div>
+    <div class="left category">
+      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+      <div class="category-title">Community</div>
+    </div>
+    <div class="right category">
+      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+      <div class="category-title">Community</div>
     </div>
   </div>
 
   <!-- RIGHT BAR -->
   <div class="right-sidebar">
-    <div class="contact-info-box">
-      <a href"" class = "left-sidebar-item" id = "link1">Some link here</a>
-      <a href"" class = "left-sidebar-item" id "link2">Another link here</a>
-      <a href"" class = "left-sidebar-item" id = "link3">And another one here</a>
-    </div>
+    
   </div>
+
+  <!-- FOOTER -->
+  <footer class="clear">
+    <a class="footer-link" href="">About</a>
+    <a class="footer-link" href="">Jobs</a>
+    <a class="footer-link" href="">Contact</a>
+
+  </footer>
 </body>
 </html>
