Added Ying's files

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <title>Craigslist, but better</title>
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/index-style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/navbar.css">
+  <link rel="shortcut icon" href="assets/img/tab-icon.ico">
 </head>
 <body>
+
   <!-- NAV BAR -->
   <div id="navbar">
     <div id="logo">craigslist</div>
@@ -35,90 +38,93 @@
     </div>
   </div>
 
-  <!-- LEFT SIDEBAR -->
-<!--   <div class="left-sidebar">
-    <div class="contact-info-box">
-      <a href"" class = "left-sidebar-item" id = "link1">Some link here</a>
-      <a href"" class = "left-sidebar-item" id = "link2">Another link here</a>
-      <a href"" class = "left-sidebar-item" id = "link3">And another one here</a>
-    </div>
-  </div>
- -->
   <!-- MAIN CONTENT -->
-  <div class="left-offset main-content">
-    <div class="gallery">
-    <div class="hero-image">
-      <img class="img-scaled-wh" src="assets/img/plastic-beach-day.jpg">
-      <div class="hero-image-description">Beautiful beachfront condo</div>
-    </div>
-    </div>
-    <div class="left category">
-      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-      <div class="category-title">Community</div>
-    </div>
-    <div class="right category">
-      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-      <div class="category-title">Personals</div>
-    </div>
-    <div class="left category">
-      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-      <div class="category-title">Housing</div>
-    </div>
-    <div class="right category">
-      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-      <div class="category-title">For Sale</div>
-    </div>
-    <div class="left category">
-      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-      <div class="category-title">Jobs</div>
-    </div>
-    <div class="right category">
-      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-      <div class="category-title">Discussion Forums</div>
-    </div>
-    <div class="left category">
-      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-      <div class="category-title">Services</div>
-    </div>
-    <div class="right category">
-      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-      <div class="category-title">Gigs</div>
-    </div>
-<!--     <div class="left category">
-      <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-      <div class="category-title">Resumes</div>
-    </div>
- -->  </div>
+  <div class="main-content">
 
-  <!-- RIGHT BAR -->
-<!--   <div class="right-sidebar">
-    
+    <div class="gallery">
+      <div class="hero-image">
+        <img class="img-scaled-wh" src="assets/img/plastic-beach-day.jpg">
+        <div class="hero-image-description"><h1>Beautiful 9br/5bath in Picturesque Waterfront Location</h1></div>
+      </div>
+    </div>
+    <div class="categories">
+      <div class="left category">
+        <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+        <div class="category-overlay">
+          <div class="category-title">Community</div>
+          <div class="category-icon">
+            <img class="img-scaled-h" src="assets/img/community.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="right category">
+        <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+        <div class="category-overlay">
+          <div class="category-title">Personals</div>
+          <div class="category-icon">
+            <img class="img-scaled-h" src="assets/img/personal.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="left category">
+        <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+        <div class="category-overlay">
+          <div class="category-title">Housing</div>
+          <div class="category-icon">
+            <img class="img-scaled-h" src="assets/img/housing.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="right category">
+        <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+        <div class="category-overlay">
+          <div class="category-title">For Sale</div>
+          <div class="category-icon">
+            <img class="img-scaled-h" src="assets/img/for-sale.png" alt="">
+          </div>
+         </div>
+      </div>
+      <div class="left category">
+        <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+        <div class="category-overlay">
+          <div class="category-title">Jobs</div>
+          <div class="category-icon">
+            <img class="img-scaled-h" src="assets/img/jobs.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="right category">
+        <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+        <div class="category-overlay">
+          <div class="category-title">Discussion Forums</div>
+          <div class="category-icon">
+            <img class="img-scaled-h" src="assets/img/discussion.png" alt="">
+          </div>
+         </div>
+      </div>
+      <div class="left category">
+        <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
+        <div class="category-overlay">
+          <div class="category-title">Services</div>
+          <div class="category-icon">
+            <img class="img-scaled-h" src="assets/img/services.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="right category">
+        <img src="assets/img/gigs.jpg" alt="" class="img-scaled-wh">
+        <div class="category-overlay">
+          <div class="category-title">Gigs</div>
+          <div class="category-icon">
+            <img class="img-scaled-h" src="assets/img/gig.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
- -->
+
   <!-- FOOTER -->
   <footer class="clearfix clear">
-<!--     <a class="footer-link" href="">About</a>
-    <a class="footer-link" href="">Jobs</a>
-    <a class="footer-link" href="">Contact</a>
- -->    
- <!-- help safety privacy feedback cl jobs terms about mobile -->
-
- <!-- help, faq, abuse, legal
-      avoid scams & fraud
-      personal safety tips
-      terms of use
-      privacy policy
-      system status
-      about craigslist
-      craigslist is hiring in sf
-      craigslist open source
-      craigslist blog
-      best-of-craigslist
-      craigslist TV
-      "craigslist joe"
-      craig connects
-      progressive directory
-       -->
     <table class="footer-table">
       <tbody>
         <tr>
