Added sexy splash page

--- a/detail.html
+++ b/detail.html
@@ -5,6 +5,7 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="assets/css/detail-style.css">
   <link rel="stylesheet" type="text/css" href="assets/css/navbar.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
 </head>
 <body>
 <!-- NAV BAR -->
@@ -180,6 +181,54 @@
       <img class="img-scaled-wh" src="assets/img/recommend-3.jpg">
     </div>
   </div>
-<!--   </div> -->
+
+  <!-- FOOTER -->
+  <footer class="clearfix clear">
+    <table class="footer-table">
+      <tbody>
+        <tr>
+          <td class="footer-column-spacer"></td>
+          <td class="footer-columns footer-column-title">How to use Craigslist</td>
+          <td class="footer-column-spacer"></td>
+          <td class="footer-columns footer-column-title">About Us</td>
+          <td class="footer-column-spacer"></td>
+          <td class="footer-columns footer-column-title">Extras</td>
+        </tr>
+        <tr>
+          <td class="footer-column-spacer"></td>
+          <td class="footer-column">
+            <ul>              
+              <li><a class="footer-link" href="">Help</a></li>
+              <li><a class="footer-link" href="">Personal safety tips</a></li>
+              <li><a class="footer-link" href="">Avoid scams and fraud</a></li>
+              <li><a class="footer-link" href="">Privacy</a></li>
+              <li><a class="footer-link" href="">Terms of use</a></li>
+              <li><a class="footer-link" href="">System status</a></li>
+            </ul>
+          </td>
+          <td class="footer-column-spacer"></td>
+          <td class="footer-column">
+            <ul>
+              <li><a class="footer-link" href="">About</a></li>
+              <li><a class="footer-link" href="">We're hiring in SF!</a></li>
+              <li><a class="footer-link" href="">Blog</a></li>
+              <li><a class="footer-link" href="">Craigslist open source</a></li>
+            </ul>          
+          </td>
+          <td class="footer-column-spacer"></td>
+          <td class="footer-column">
+            <ul>
+              <li><a class="footer-link" href="">Best of Craigslist</a></li>
+              <li><a class="footer-link" href="">Craigslist Joe</a></li>
+              <li><a class="footer-link" href="">Craigslist TV</a></li>
+              <li><a class="footer-link" href="">Craig connects</a></li>
+              <li><a class="footer-link" href="">Progressive directory</a></li>
+            </ul>          
+          </td>
+          <td class="footer-column-spacer"></td>
+        </tr>
+      </tbody>
+    </table>
+  </footer>
 </body>
 </html>
