--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="assets/css/index-style.css">
   <link rel="stylesheet" type="text/css" href="assets/css/navbar.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
   <link rel="shortcut icon" href="assets/img/tab-icon.ico">
 </head>
 <body>
@@ -25,7 +26,7 @@
           <option value="">Services</option>
           <option value="">Gigs</option>
         </select>
-      </div>   
+      </div>
       <input type="text" placeholder="I'm looking for..." id="search-field" />
       <input type="submit" value="Search" class="button" id="search-button" />
     </div>
@@ -38,19 +39,34 @@
     </div>
   </div>
 
+  <!-- SEXY SPLASH PAGE -->
+  <div class="splash-container">
+    <div class="splash" id="golden-gate-splash">
+      <img src="assets/img/golden-gate.jpeg" class="img-scaled-wh">
+    </div>
+    <div class="overlay">
+      <div class="splash-text-container">
+        <div class="splash-title">Welcome.</div>
+        <div class="splash-subtitle">Discover treasures in your area with Craigslist.</div>
+      </div>
+    </div>
+  </div>
+
   <!-- MAIN CONTENT -->
   <div class="main-content">
 
+    <h1>What's New</h1>
     <div class="gallery">
       <div class="hero-image">
-        <img class="img-scaled-wh" src="assets/img/plastic-beach-day.jpg">
+        <img class="img-scaled-wh" src="assets/img/house-main.jpg">
         <div class="hero-image-description"><h1>Beautiful 9br/5bath in Picturesque Waterfront Location</h1></div>
       </div>
     </div>
-    <div class="categories">
+    <h1>Browse Categories</h1>
+    <div class="clearfix categories">
       <div class="left category">
         <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-        <div class="category-overlay">
+        <div class="overlay">
           <div class="category-title">Community</div>
           <div class="category-icon">
             <img class="img-scaled-h" src="assets/img/community.png" alt="">
@@ -59,7 +75,7 @@
       </div>
       <div class="right category">
         <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-        <div class="category-overlay">
+        <div class="overlay">
           <div class="category-title">Personals</div>
           <div class="category-icon">
             <img class="img-scaled-h" src="assets/img/personal.png" alt="">
@@ -68,7 +84,7 @@
       </div>
       <div class="left category">
         <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-        <div class="category-overlay">
+        <div class="overlay">
           <div class="category-title">Housing</div>
           <div class="category-icon">
             <img class="img-scaled-h" src="assets/img/housing.png" alt="">
@@ -77,7 +93,7 @@
       </div>
       <div class="right category">
         <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-        <div class="category-overlay">
+        <div class="overlay">
           <div class="category-title">For Sale</div>
           <div class="category-icon">
             <img class="img-scaled-h" src="assets/img/for-sale.png" alt="">
@@ -86,7 +102,7 @@
       </div>
       <div class="left category">
         <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-        <div class="category-overlay">
+        <div class="overlay">
           <div class="category-title">Jobs</div>
           <div class="category-icon">
             <img class="img-scaled-h" src="assets/img/jobs.png" alt="">
@@ -95,7 +111,7 @@
       </div>
       <div class="right category">
         <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-        <div class="category-overlay">
+        <div class="overlay">
           <div class="category-title">Discussion Forums</div>
           <div class="category-icon">
             <img class="img-scaled-h" src="assets/img/discussion.png" alt="">
@@ -104,7 +120,7 @@
       </div>
       <div class="left category">
         <img src="assets/img/grass.jpg" alt="" class="img-scaled-wh">
-        <div class="category-overlay">
+        <div class="overlay">
           <div class="category-title">Services</div>
           <div class="category-icon">
             <img class="img-scaled-h" src="assets/img/services.png" alt="">
@@ -113,7 +129,7 @@
       </div>
       <div class="right category">
         <img src="assets/img/gigs.jpg" alt="" class="img-scaled-wh">
-        <div class="category-overlay">
+        <div class="overlay">
           <div class="category-title">Gigs</div>
           <div class="category-icon">
             <img class="img-scaled-h" src="assets/img/gig.png" alt="">
